--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  
   <modelVersion>4.0.0</modelVersion>
   <groupId>demo</groupId>
   <artifactId>test</artifactId>
   <packaging>war</packaging>
-  <version>10.0-SNAPSHOT</version>
+  <version>5.0-SNAPSHOT</version>
   
   <properties>
   	<gig.version>0.4.3</gig.version>
@@ -52,10 +53,8 @@
   		<scope>test</scope>
   	</dependency>
   </dependencies>
-  
   <build>
-  	<plugins>
-  
+  <plugins>
   		<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-dependency-plugin</artifactId>
@@ -215,11 +214,11 @@
   	</pluginManagement>
   </build>
   <distributionManagement>
-  <snapshotRepository>
-  <id>deployment</id>
-  <name>internalsnap</name>
-  <url>http://35.222.238.221:8081/repository/maven-snapshots/</url>
-  </snapshotRepository>
+    <snapshotRepository>
+   <id>deployment</id>
+    <name>snap</name>
+      <url>http://34.72.202.118:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
   </distributionManagement>
   
 </project>
