--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  
   <modelVersion>4.0.0</modelVersion>
-  <groupId>demo</groupId>
-  <artifactId>test</artifactId>
+  <groupId>dem</groupId>
+  <artifactId>txt</artifactId>
   <packaging>war</packaging>
-  <version>6.0-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
   
   <properties>
   	<gig.version>0.4.3</gig.version>
@@ -53,8 +52,9 @@
   		<scope>test</scope>
   	</dependency>
   </dependencies>
+  
   <build>
-  <plugins>
+  	<plugins>
   		<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-dependency-plugin</artifactId>
@@ -217,8 +217,7 @@
     <snapshotRepository>
    <id>deployment</id>
     <name>snap</name>
-      <url>http://34.72.202.118:8081/repository/maven-snapshots/</url>
+      <url>http://35.202.69.180:8081/repository/maven-snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
-  
 </project>
